--- a/img_gallery.html
+++ b/img_gallery.html
@@ -9,7 +9,46 @@
 
         <nav></nav>
 
-        <main></main>
+        <main>
+
+            <div>
+                <img src="images/sillycat1.png" alt="cat sticking tongue out" width="100px" height="100px"/>
+            </div>
+
+            <div>
+                <img src="images/sillycat2.png" alt="cat being very surprised" width="100px" height="100px"/>
+            </div>
+
+            <div>
+                <img src="images/sillycat3.png" alt="tiny black kitten" width="100px" height="100px"/>
+            </div>
+
+            <div>
+                <img src="images/sillycat4.png" alt="cat staring at camera" width="100px" height="100px"/>
+            </div>
+
+            <div>
+                <img src="images/sillycat5.png" alt="black and white kitten with big eyes" width="100px" height="100px"/>
+            </div>
+
+            <div>
+                <img src="images/sillycat6.png" alt="black and white cat in white sock" width="100px" height="100px"/>
+            </div>
+
+            <div>
+                <img src="images/sillycat7.png" alt="cat raising hand - text reads 'i have a silly thing to say'" width="100px" height="100px"/>
+            </div>
+
+            <div>
+                <img src="images/sillycat8.png" alt="cat staring" width="100px" height="100px"/>
+            </div>
+
+            <div>
+                <img src="images/sillycat9.png" alt="cat staring with mouth open" width="100px" height="100px"/>
+            </div>
+
+
+        </main>
 
         <aside></aside>
 
