--- a/contact_us.html
+++ b/contact_us.html
@@ -1,22 +1,66 @@
 <html>
-    <head>
-        <title>Silly Cats Society</title>
-    </head>
+
+<head>
+    <title>Silly Cats Society</title>
+</head>
 
 
-    <body>
-        <header><h1>Silly Cats Society</h1></header>
+<body>
+    <header>
+        <h1>Silly Cats Society</h1>
+    </header>
 
-        <nav></nav>
+    <nav>
 
-        <main></main>
+        <ul>
+            <li><a href=index.html>Home</a></li>
+            <li><a href=img_gallery.html>Gallery</a></li>
+            <li><a href=img_gallery.html>Current Members</a></li>
+            <li><a href=event_calendar.html>Events</a></li>
+            <li><a href=contact_us.html>Contact Us</a></li>
+        </ul>
 
-        <aside></aside>
 
-        <footer></footer>
+    </nav>
+
+    <main>
 
 
-    </body>
+        <form>
+            <fieldset>
+                <legend>Contact Us using the below form.</legend>
+                <label for="name">Name:</label>
+                <input type="text" name="name" value="" /> <br />
+
+                <label for="email">Email:</label>
+                <input type="text" name="email" value="" /> <br />
+
+                <label for="member_status">Membership Status:</label>
+
+                <input type="radio" id="html" name="member" value="HTML">
+                <label for="html">Member</label>
+
+                <input type="radio" id="html" name="nonmember" value="HTML">
+                <label for="html">Non member</label><br>
+
+                <label for="comments">Comments:</label>
+                <input type="text" name="comment" value="" /> <br />
+
+                <label for="myfile">Attach a file:</label>
+                <input type="file" id="myfile" name="myfile">
+
+            </fieldset>
+        </form>
+
+
+    </main>
+
+    <aside></aside>
+
+    <footer></footer>
+
+
+</body>
 
 
 
