--- a/contact_us.html
+++ b/contact_us.html
@@ -33,7 +33,7 @@
                 <input type="text" name="name" value="" /> <br />
 
                 <label for="email">Email:</label>
-                <input type="text" name="email" value="" /> <br />
+                <input type="email" name="email" value="" /> <br />
 
                 <label for="member_status">Membership Status:</label>
 
