--- a/event_calendar.html
+++ b/event_calendar.html
@@ -10,7 +10,17 @@
         <h1>Silly Cats Society</h1>
     </header>
 
-    <nav></nav>
+    <nav>
+
+        <ul>
+            <li><a href=index.html>Home</a></li>
+            <li><a href=img_gallery.html>Gallery</a></li>
+            <li><a href=img_gallery.html>Current Members</a></li>
+            <li><a href=event_calendar.html>Events</a></li>
+            <li><a href=contact_us.html>Contact Us</a></li>
+        </ul>
+
+    </nav>
 
     <main>
 
