--- a/contact_us.html
+++ b/contact_us.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href=index.html>Home</a></li>
             <li><a href=img_gallery.html>Gallery</a></li>
-            <li><a href=img_gallery.html>Current Members</a></li>
+            <li><a href=current_members.html>Current Members</a></li>
             <li><a href=event_calendar.html>Events</a></li>
             <li><a href=contact_us.html>Contact Us</a></li>
         </ul>
