--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <h3>Welcome to the silly cats society!</h3>
 
-            <p>The silly cats society is RGU's unofficial silly cat posting society, here we partake in the most important acts of analysing silly cat memes. We believe that the silliness of cats is what makes them so special and unique. We post and discuss the latest and greatest silly cat memes on a daily basis.</p>
+            <p>The silly cats society is RGU's unofficial silly cat posting society, here we partake in the most important acts of analysing silly cat memes. We believe that the silliness of cats is what makes them so special and unique. We post and discuss the latest and greatest silly cat memes on a weekly basis.</p>
 
 
         </div>
