--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
     <header>
         <h1>Silly Cats Society</h1>
+        <img src="images/sillycatlogo.png" id = "headerImage" alt="Silly cat sticking tongue out with RGU logo">
     </header>
 
     <nav>
 
             <ul>
-                <li><a href = index.html>Home</a></li>
-                <li><a href = img_gallery.html>Gallery</a></li>
-                <li><a href=current_members.html>Current Members</a></li>
-                <li><a href = event_calendar.html>Events</a></li>
-                <li><a href = contact_us.html>Contact Us</a></li>
+                <li class=”active”><a href = index.html>Home</a></li>
+                <li class=”active”><a href = img_gallery.html>Gallery</a></li>
+                <li class=”active”><a href=current_members.html>Current Members</a></li>
+                <li class=”active”><a href = event_calendar.html>Events</a></li>
+                <li class=”active”><a href = contact_us.html>Contact Us</a></li>
             </ul>
 
 
@@ -32,14 +33,27 @@
 
             <p>The silly cats society is RGU's unofficial silly cat posting society, here we partake in the most important acts of analysing silly cat memes. We believe that the silliness of cats is what makes them so special and unique. We post and discuss the latest and greatest silly cat memes on a weekly basis.</p>
 
-
-        </div>
-
+            <div class="youtube-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mwLz2AHljv4?autoplay=1&mute=1&loop=1&color=white&controls=0&playlist=mwLz2AHljv4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </div>
+            </div>
     </main>
 
-    <aside></aside>
+    <aside>
 
-    <footer></footer>
+        <div class="row">
+            <div class="column" style="background-color:#aaa;">
+              <a class="twitter-timeline" data-height="800" href="https://twitter.com/starwars?ref_src=twsrc%5Etfw">Tweets by starwars</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            </div>
+          </div>
+        
+    </aside>
+
+    <footer>
+
+        <p> © Tom Barnicoat </p>
+
+    </footer>
 
 
 </body>
