i added matt to member list
it's matt!

--- a/current_members.html
+++ b/current_members.html
@@ -45,7 +45,18 @@
                 style="overflow:hidden">
                 <h5>Theo</h5>
                 </div>
+
+                <div class="col-sm" style="text-align: center;">
+                    <h5>Honorary Vice President</h5>
+                    <img src="images/matt.JPG" class="rounded-circle
+                    massie-hovering" width="120" height="120" preserveAspectRatio="xMidYMid slice"
+                    style="overflow:hidden">
+                    <h5>Matt</h5>
+                    </div>
                  </div>
+
+
+                 
                 </div>
                 
 
