event calendar fixed
stuff was in wrong columns so fixed that

--- a/event_calendar.html
+++ b/event_calendar.html
@@ -31,7 +31,7 @@
                 <th>Monday</th>
                 <th>Tuesday</th>
                 <th>Wednesday</th>
-                <th>Thursday</ th>
+                <th>Thursday</th>
                 <th>Friday</th>
                 <th>Saturday</th>
                 <th>Sunday</th>
@@ -65,8 +65,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>Silly Saturday! - display your most silly cat memes <br /> In-person @ the
-                    club house</td>
+                <td>Silly Saturday! - display your most silly cat memes <br /> Online @ Discord Server</td>
                 <td></td>
             </tr>
             <tr>
@@ -74,17 +73,16 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
                 <td>Traditional Thursday - old school cat meme discussion! <br /> In-person @ the
                     club house</td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <th>W5</th>
                 <td></td>
-                <td>Tabby Tuesday - discussion about Tabby cats<br /> In-person @ the
-                    club house</td>
+                <td>Theo Tuesday - discussion about the society owners cat<br /> Online @ Discord Server</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -110,18 +108,17 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>Sacred Sunday - discussion about holy cats! <br /> In-person @ the
-                    club house</td>
+                <td>Sacred Sunday - discussion about holy cats! <br /> Online @ Discord Server</td>
             </tr>
             <tr>
                 <th>W8</th>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
                 <td>Tumultuous Thursday - discussion about crazy cats! <br /> In-person @ the
                     club house</td>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
@@ -147,9 +144,9 @@
             </tr>
             <tr>
                 <th>W12</th>
-                <td></td>
                 <td>Meow Monday! -show off any cat <br /> In-person @ the
                     club house</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
