--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en-GB">
+  
+<!-- Head -->
 <head>
+  <meta charset="UTF-8">
   <title>Silly Cats Society</title>
   <link rel='stylesheet' href='css/main.css'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -10,7 +13,7 @@
     crossorigin="anonymous"></script>
 
 
-
+  <!-- Login script -->
   <script>
     var counter = 2;
     function login() {
@@ -22,38 +25,33 @@
       }
       counter += 1;
     }
-
-
-
-    
   </script>
-  
   </head>
 
 
+<!-- Body -->
 <body>
   <header>
 
+   
+    <!-- Login form -->
     <form>
       <fieldset>
-
-        <input type="text" name="name" value="email" />
-        <input type="text" name="name" value="password" />
-        <button type="button" onclick=login()>Login</button> <br />
-
-
-        <h1>Silly Cats Society</h1>
-        <img src="images/sillycatlogo.png" id="headerImage" alt="Silly cat sticking tongue out with RGU logo">
-
-
+        <input type="text" name="name" value="email" >
+        <input type="text" name="name" value="password" >
+        <button type="button" onclick=login()>Login</button> <br>
       </fieldset>
     </form>
 
+    <!-- Logo image and webpage title -->
+    <h1>Silly Cats Society</h1>
+    <img src="images/sillycatlogo.png" id="headerImage" alt="Silly cat sticking tongue out with RGU logo">
 
   </header>
 
-  <nav>
 
+  <!-- Navigation bar -->
+  <nav>
     <ul>
       <li class=”active”><a href=index.html>Home</a></li>
       <li class=”active”><a href=img_gallery.html>Gallery</a></li>
@@ -61,17 +59,12 @@
       <li class=”active”><a href=event_calendar.html>Events</a></li>
       <li class=”active”><a href=contact_us.html>Contact Us</a></li>
     </ul>
-
-
   </nav>
 
+
+  <!-- Main -->
   <main>
-
-
-
-
     <div>
-
       <h3>Welcome to the silly cats society!</h3>
 
       <p>The silly cats society is RGU's unofficial silly cat posting society, here we partake in the most
@@ -79,16 +72,15 @@
         special and unique. We post and discuss the latest and greatest silly cat memes on a weekly basis.</p>
 
       <div class="youtube-container">
-        <iframe width="560" height="315"
-          src="https://www.youtube.com/embed/mwLz2AHljv4?autoplay=1&mute=1&loop=1&color=white&controls=0&playlist=mwLz2AHljv4"
-          title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/vR_E91r1Ya4?autoplay=1&mute=1&loop=1&color=white&controls=0&playlist=vR_E91r1Ya4"
+          title="YouTube video player"
           allowfullscreen></iframe>
       </div>
     </div>
 
 
-
+    <!-- Carousel -->
     <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide-to="0" class="active"
@@ -132,31 +124,24 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-
   </main>
 
+  <!-- Twitter embed -->
   <aside>
-
     <div class="row">
       <div class="column" style="background-color:#aaa;">
         <a class="twitter-timeline" data-height="800" href="https://twitter.com/starwars?ref_src=twsrc%5Etfw">Tweets by
           starwars</a>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <script async src="https://platform.twitter.com/widgets.js" ></script>
 
       </div>
     </div>
-
   </aside>
 
+  <!-- Footer -->
   <footer>
-
     <p> © Tom Barnicoat </p>
-
   </footer>
-
-
 </body>
-
-
 
 </html>
