--- a/current_members.html
+++ b/current_members.html
@@ -56,6 +56,16 @@
             </div>
         </div>
 
+        <!-- Picture of Jaron with text -->
+        <div class="col-sm" style="text-align: center;">
+            <h5>Treasurer</h5>
+            <img src="images/jaron.JPG" class="rounded-circle massie-hovering" width="120" height="120"
+                style="overflow:hidden" alt="Picture of Matt - brown hair/stubble">
+            <h5>Jaron</h5>
+        </div>
+    </div>
+</div>
+
 
 
     </main>
