--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     crossorigin="anonymous"></script>
 
 
+    <link rel = "icon" type = "image/x-icon" href="images/sillycatlogo.ico">
+
   <!-- Login script -->
   <script>
     var counter = 2;
