--- a/img_gallery.html
+++ b/img_gallery.html
@@ -7,6 +7,10 @@
         <title>Silly Cats Society</title>
         <link rel='stylesheet' href='css/main.css'>
 
+
+ <!-- Favicon -->
+ <link rel = "icon" type = "image/x-icon" href="images/sillycatlogo.ico">
+
         <!-- Styling for zooming -->
         <style>
             .zoom {
