--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 
-
+  <!-- Favicon -->
     <link rel = "icon" type = "image/x-icon" href="images/sillycatlogo.ico">
 
   <!-- Login script -->
