--- a/event_calendar.html
+++ b/event_calendar.html
@@ -3,6 +3,10 @@
 
 <!-- Head -->
 <head>
+
+ <!-- Favicon -->
+ <link rel = "icon" type = "image/x-icon" href="images/sillycatlogo.ico">
+
     <meta charset="UTF-8">
     <title>Silly Cats Society</title>
     <link rel='stylesheet' href='css/main.css'>
