--- a/img_gallery.html
+++ b/img_gallery.html
@@ -54,7 +54,7 @@
 
 
         <!-- Main -->
-        <main>
+        <main style="width:100%">
             <div id='wrap'>            
 
             <div>
