--- a/img_gallery.html
+++ b/img_gallery.html
@@ -1,3 +1,14 @@
+<!--
+Threat Model
+Threat Source: External
+Threat Agent: Human
+Threat Intention: Intentional
+Threat Motivation: Embarrassment of the society
+Threat Impact: Defacement of society website, changing images.
+Threat Mitigation: Login validation, 2FA in place before images can be changed, email updates to system administrator of a change
+-->
+
+
 <!DOCTYPE html>
 <html lang="en-GB">
 
