--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!--
+Threat Model
+Threat Source: External
+Threat Agent: Human
+Threat Intention: Intentional
+Threat Motivation: Embarrassment of the society
+Threat Impact: Defacement of society website, changing video, text, abusing the login system.
+Threat Mitigation: Login validation, 2FA in place before video/text can be changed, email updates to system administrator of a change
+-->
+
 <!DOCTYPE html>
 <html lang="en-GB">
   
@@ -130,19 +140,17 @@
 
   <!-- Twitter embed -->
   <aside>
-    <div class="row">
-      <div class="column" style="background-color:#aaa;">
-        <a class="twitter-timeline" data-height="800" href="https://twitter.com/starwars?ref_src=twsrc%5Etfw">Tweets by
-          starwars</a>
-        <script async src="https://platform.twitter.com/widgets.js" ></script>
+    <div>
+      <img src="images/sillycat1.png" width="100px" height="100px" id="asideTagImage">
+      <p id="asideTag">cat society</p>
+      <p id="asideTag">the cat society has lots of activities up and coming. we hope you will look forward to them.</p>
 
-      </div>
     </div>
   </aside>
 
   <!-- Footer -->
   <footer>
-    <p> © Tom Barnicoat </p>
+    <p> © Tom Barnicoat 2023 </p>
   </footer>
 </body>
 
