--- a/event_calendar.html
+++ b/event_calendar.html
@@ -1,3 +1,13 @@
+<!--
+Threat Model
+Threat Source: External
+Threat Agent: Human
+Threat Intention: Intentional
+Threat Motivation: Embarrassment of the society
+Threat Impact: Defacement of society website, changing of events.
+Threat Mitigation: 2FA in place before events can be changed, email updates to system administrator of a change
+-->
+
 <!DOCTYPE html>
 <html lang="en-GB">
 
@@ -10,6 +20,28 @@
     <meta charset="UTF-8">
     <title>Silly Cats Society</title>
     <link rel='stylesheet' href='css/main.css'>
+
+
+
+    <script>
+        function submit_event() {
+            var title = document.forms["event"]["event_title"].value;
+            var date = document.forms["event"]["event_date"].value;
+            if (title == "") {
+                alert("An event must have a title!");
+            }
+            else {
+                if (date.length == 0) {
+                    alert("An event must have a date!");
+                }
+                else {
+                    alert("Event submitted! The society will contact you soon!");
+                }
+            }
+        }
+    </script>
+
+
 </head>
 
 <!-- Body -->
@@ -156,6 +188,29 @@
             </tr>
         </table>
 
+
+
+<p>Want to recommend an event? Tell us below!</p>
+
+
+ <!-- Contact form -->
+ <form name = "event">
+        <label for="event_title">Event:</label>
+        <input id="event_title" type="event_title" name="event_title" value=""> <br>
+
+        <label for="event_date">Attach a file:</label>
+        <input id="event_date" type="date" name="event_date"> <br>
+
+        <button type="button" onclick=submit_event()>Submit Event</button>
+
+</form>
+<div>
+    <p id="form_outcome"></p>
+</div>
+
+
+
+        
     </main>
 
     <aside></aside>
