--- a/contact_us.html
+++ b/contact_us.html
@@ -44,6 +44,9 @@ Threat Mitigation: Login validation, Rate limit on amount of forms able to be se
             <li><a href=current_members.html>Current Members</a></li>
             <li><a href=event_calendar.html>Events</a></li>
             <li><a href=contact_us.html>Contact Us</a></li>
+            <li><a href=shop.html>Shop</a></li>
+            <li><a href=catvideos.html>Videos</a></li>
+            <li><a href=catadvice.html>Advice</a></li>
         </ul>
     </nav>
 
@@ -93,7 +96,9 @@ Threat Mitigation: Login validation, Rate limit on amount of forms able to be se
 
     </aside>
 
-    <footer></footer>
+    <footer>
+        <p> © Thomas Barnicoat 2023 </p>
+    </footer>
 
 
 </body>
