--- a/current_members.html
+++ b/current_members.html
@@ -46,6 +46,9 @@ Threat Mitigation: Login validation, 2FA in place before member images can be ch
             <li class=”active”><a href=current_members.html>Current Members</a></li>
             <li class=”active”><a href=event_calendar.html>Events</a></li>
             <li class=”active”><a href=contact_us.html>Contact Us</a></li>
+            <li class=”active”><a href=shop.html>Shop</a></li>
+            <li class=”active”><a href=catvideos.html>Videos</a></li>
+            <li class=”active”><a href=catadvice.html>Advice</a></li>
         </ul>
     </nav>
 
@@ -86,7 +89,9 @@ Threat Mitigation: Login validation, 2FA in place before member images can be ch
 
     <aside></aside>
 
-    <footer></footer>
+    <footer>
+        <p> © Thomas Barnicoat 2023 </p>
+    </footer>
 
 
 </body>
