--- a/event_calendar.html
+++ b/event_calendar.html
@@ -58,6 +58,9 @@ Threat Mitigation: 2FA in place before events can be changed, email updates to s
             <li><a href=current_members.html>Current Members</a></li>
             <li><a href=event_calendar.html>Events</a></li>
             <li><a href=contact_us.html>Contact Us</a></li>
+            <li><a href=shop.html>Shop</a></li>
+            <li><a href=catvideos.html>Videos</a></li>
+            <li><a href=catvideos.html>Advice</a></li>
         </ul>
 
     </nav>
@@ -215,7 +218,9 @@ Threat Mitigation: 2FA in place before events can be changed, email updates to s
 
     <aside></aside>
 
-    <footer></footer>
+    <footer>
+        <p> © Thomas Barnicoat 2023 </p>
+    </footer>
 
 
 </body>
