--- a/img_gallery.html
+++ b/img_gallery.html
@@ -59,6 +59,9 @@ Threat Mitigation: Login validation, 2FA in place before images can be changed, 
                 <li><a href=current_members.html>Current Members</a></li>
                 <li><a href=event_calendar.html>Events</a></li>
                 <li><a href=contact_us.html>Contact Us</a></li>
+                <li><a href=shop.html>Shop</a></li>
+                <li><a href=catvideos.html>Videos</a></li>
+                <li><a href=catadvice.html>Advice</a></li>
             </ul>
 
         </nav>
@@ -111,7 +114,9 @@ Threat Mitigation: Login validation, 2FA in place before images can be changed, 
 
         <aside></aside>
 
-        <footer></footer>
+        <footer>
+            <p> © Thomas Barnicoat 2023 </p>
+        </footer>
 
 
    
