--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@ Threat Mitigation: Login validation, 2FA in place before video/text can be chang
       <li class=”active”><a href=current_members.html>Current Members</a></li>
       <li class=”active”><a href=event_calendar.html>Events</a></li>
       <li class=”active”><a href=contact_us.html>Contact Us</a></li>
+      <li class=”active”><a href=shop.html>Shop</a></li>
+      <li class=”active”><a href=catvideos.html>Videos</a></li>
+      <li class=”active”><a href=catadvice.html>Advice</a></li>
     </ul>
   </nav>
 
@@ -150,7 +153,7 @@ Threat Mitigation: Login validation, 2FA in place before video/text can be chang
 
   <!-- Footer -->
   <footer>
-    <p> © Tom Barnicoat 2023 </p>
+    <p> © Thomas Barnicoat 2023 </p>
   </footer>
 </body>
 
