--- a/event_calendar.html
+++ b/event_calendar.html
@@ -13,13 +13,18 @@ Threat Mitigation: 2FA in place before events can be changed, email updates to s
 
 <!-- Head -->
 <head>
+    <meta charset="UTF-8">
+    <title>Silly Cats Society</title>
+    <link rel='stylesheet' href='css/main.css'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
 
  <!-- Favicon -->
  <link rel = "icon" type = "image/x-icon" href="images/sillycatlogo.ico">
 
-    <meta charset="UTF-8">
-    <title>Silly Cats Society</title>
-    <link rel='stylesheet' href='css/main.css'>
 
 
 
@@ -47,7 +52,11 @@ Threat Mitigation: 2FA in place before events can be changed, email updates to s
 <!-- Body -->
 <body>
     <header>
-        <h1>Silly Cats Society</h1>
+       
+    <!-- Logo image and webpage title -->
+    <h1>Silly Cats Society</h1>
+    <img src="images/sillycatlogo.png" id="headerImage" alt="Silly cat sticking tongue out with RGU logo">
+
     </header>
 
     <nav>
