--- a/shop.html
+++ b/shop.html
@@ -106,6 +106,9 @@ Threat Mitigation: Compare against list of whitelisted links - prevent a change 
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
+      <blockquote class="twitter-tweet" data-width="550"><p lang="en" dir="ltr">he&#39;s having fun with his toy <a href="https://t.co/WDzgampMxj">pic.twitter.com/WDzgampMxj</a></p>&mdash; cats with pawerful aura (@catswithaura) <a href="https://twitter.com/catswithaura/status/1648258230945206272?ref_src=twsrc%5Etfw">April 18, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
   </main>
 
   <!-- Archie information -->
