--- a/contact_us.html
+++ b/contact_us.html
@@ -12,19 +12,32 @@ Threat Mitigation: Login validation, Rate limit on amount of forms able to be se
 <html lang="en-GB">
 
 <!-- Head -->
+
 <head>
+  <meta charset="UTF-8">
+  <title>Silly Cats Society</title>
+  <link rel='stylesheet' href='css/main.css'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+
+
  <!-- Favicon -->
  <link rel = "icon" type = "image/x-icon" href="images/sillycatlogo.ico">
 
-    <meta charset="UTF-8">
-    <title>Silly Cats Society</title>
-    <link rel='stylesheet' href='css/main.css'>
 </head>
 
 
 <!-- Body -->
 <body>
     <header>
+
+<!-- Logo image and webpage title -->
+<h1>Silly Cats Society</h1>
+<img src="images/sillycatlogo.png" id="headerImage" alt="Silly cat sticking tongue out with RGU logo">
+
         <!-- Script to send form -->
         <script>
             function send_form() {
@@ -32,7 +45,6 @@ Threat Mitigation: Login validation, Rate limit on amount of forms able to be se
             }
 
         </script>
-        <h1>Silly Cats Society</h1>
     </header>
 
 
@@ -83,16 +95,14 @@ Threat Mitigation: Login validation, Rate limit on amount of forms able to be se
             <p id="form_outcome"></p>
         </div>
     </main>
-    <aside>
 
+
+    <aside>
 
         <!-- Twitter embed -->
         <a class="twitter-timeline" data-height="800" href="https://twitter.com/starwars?ref_src=twsrc%5Etfw">Tweets by
             starwars</a>
         <script async src="https://platform.twitter.com/widgets.js"></script>
-
-
-
 
     </aside>
 
