--- a/contact_us.html
+++ b/contact_us.html
@@ -78,7 +78,7 @@ Threat Mitigation: Login validation, Rate limit on amount of forms able to be se
                 <input id="member" type="radio" name="member" value="HTML">
                 <label for="member">Member</label>
 
-                <input id="nonmember" type="radio" name="nonmember" value="HTML">
+                <input id="nonmember" type="radio" name="member" value="HTML">
                 <label for="nonmember">Non member</label><br>
 
                 <label for="comments">Comments:</label>
@@ -100,13 +100,11 @@ Threat Mitigation: Login validation, Rate limit on amount of forms able to be se
     <aside>
 
         <!-- Twitter embed -->
-        <a class="twitter-timeline" data-height="800" href="https://twitter.com/starwars?ref_src=twsrc%5Etfw">Tweets by
-            starwars</a>
-        <script async src="https://platform.twitter.com/widgets.js"></script>
-
-    </aside>
-
-    <footer>
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">~*~ timeline cleanse ~*~ <a href="https://t.co/PBemXbsub0">pic.twitter.com/PBemXbsub0</a></p>&mdash; cats with pawerful aura (@catswithaura) <a href="https://twitter.com/catswithaura/status/1649605267850674177?ref_src=twsrc%5Etfw">April 22, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+   
+   </aside>
+   
+        <footer>
         <p> © Thomas Barnicoat 2023 </p>
     </footer>
 
