--- a/event_calendar.html
+++ b/event_calendar.html
@@ -205,7 +205,7 @@ Threat Mitigation: 2FA in place before events can be changed, email updates to s
 <p>Want to recommend an event? Tell us below!</p>
 
 
- <!-- Contact form -->
+ <!-- Event form -->
  <form name = "event">
         <label for="event_title">Event:</label>
         <input id="event_title" type="event_title" name="event_title" value=""> <br>
